# living-atlas

./: .gitignore  BUILD_REPORT.md  ddl.md  plan.md
.devin/: config.local.json
ai-platform/: .dockerignore  .env.enrichment  .env.example  Makefile  PRD.md
ai-platform/article-service/: pyproject.toml
ai-platform/embedding-service/: pyproject.toml
ai-platform/embedding-service/src/embedding/: __init__.py  main.py
ai-platform/embedding-service/src/embedding/infrastructure/: chunker.py  embedding_model.py  weaviate_client.py
ai-platform/enrichment-service/: pyproject.toml
ai-platform/enrichment-service/scripts/: test_event_integration.py  test_event_integration_simple.py
ai-platform/enrichment-service/src/enrichment/: __init__.py  main.py
ai-platform/enrichment-service/src/enrichment/application/: extractors.py  service.py
ai-platform/enrichment-service/src/enrichment/infrastructure/: events.py  llm_client.py  prompt_templates.py
ai-platform/extraction-service/: pyproject.toml
ai-platform/extraction-service/scripts/: test_transcript_cleaning.py
ai-platform/extraction-service/src/extraction/: __init__.py  main.py
ai-platform/extraction-service/src/extraction/application/: diarizer.py  transcriber.py
ai-platform/extraction-service/src/extraction/infrastructure/: stt_client.py  subtitle_parser.py
ai-platform/extraction-service/src/extraction/ingestion/: four_tier_pipeline.py
ai-platform/ingestion-service/: pyproject.toml
ai-platform/ingestion-service/scripts/: extract_subtitle_vtt.py  test_crawl.py  test_ingestion_service.py  test_rate_limiting_fix.py
ai-platform/ingestion-service/scripts/output/: Gita_Gutawa_official__crawl_results.json  RJL_5_-_Fajar_Aditya_crawl_results.json  deddycorbuzier_crawl_results.json
ai-platform/ingestion-service/src/ingestion/: __init__.py  main.py
ai-platform/ingestion-service/src/ingestion/application/: crawler.py
ai-platform/ingestion-service/src/ingestion/events/: consumer.py  producer.py
ai-platform/ingestion-service/src/ingestion/infrastructure/: youtube.py
ai-platform/normalization-service/: pyproject.toml
ai-platform/normalization-service/src/normalization/: __init__.py  main.py
ai-platform/normalization-service/src/normalization/application/: normalizer.py
ai-platform/orchestration-service/: pyproject.toml
ai-platform/orchestration-service/src/orchestration/: __init__.py  main.py
ai-platform/orchestration-service/src/orchestration/application/: background_worker.py  executor.py  neo4j_sync.py  state_machine.py
ai-platform/shared/: Dockerfile.migrate  Dockerfile.shared  pyproject.toml
ai-platform/shared/src/ai_shared/: __init__.py  canonical.py  canonical_pipeline.py  config.py  database.py  events.py  logging.py  metrics.py  prompts.py  redpanda.py  storage.py
ai-platform/shared/src/ai_shared/db/: __init__.py  migrate.py  seed.py
ai-platform/shared/src/ai_shared/llm/: __init__.py  cloud_llm_client.py
ai-platform/shared/src/ai_shared/transcription/: __init__.py  openai_whisper.py
docker/: spring.Dockerfile
docs/: POD_SETUP_STRATEGY.md  README.md  deployment-report.md  knowledge-platform.md
infrastructure/: .env.example  compose.yml
reference/: deployment-report.md
scripts/: env_dev.sh  env_staging.sh  manage_pods.sh  setup_pods.sh
services/: BACKEND-PRD.md  BUILD_ERROR_REPORT.md  implementation-plan.md  pom.xml
(+424 files in other folders)
