[project]
name = "embedding-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ai-shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "openai>=1.12",
    "weaviate-client>=4.5",
    "asyncpg>=0.29",
    "aiokafka>=0.10",
    "redis>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]