[project]
name = "extraction-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ai-shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "google-cloud-speech>=2.25",
    "assemblyai>=0.20",
    "httpx>=0.27",
    "asyncpg>=0.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]