[project]
name = "normalization-service"
version = "0.1.0"
description = "AI Platform — Knowledge Normalization Service"
requires-python = ">=3.12"
dependencies = [
    "ai-shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "aiokafka>=0.10",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]