[project]
name = "orchestration-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ai-shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "prefect>=3.0",
    "apscheduler>=3.10",
    "asyncpg>=0.29",
    "aiokafka>=0.10",
    "tenacity>=8.2",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]