[project]
name = "ai-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "asyncpg>=0.29",
    "aiokafka>=0.10",
    "redis>=5.0",
    "prometheus-client>=0.19",
    "structlog>=24.0",
    "orjson>=3.9",
    "tenacity>=8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]